# wouldyou-rs

./: Cargo.toml  README.md
src/: main.rs
src/commands/: mod.rs  neverhaveiever.rs  wouldyourather.rs  wwyd.rs
