[package]
name = "would_you"
version = "0.1.0"
authors = ["Dominik <dominik@wouldyoubot.com>"]
edition = "2018"

[dependencies]
rand = "0.8.5"
serenity = { default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
